# Face-reconition

./: README.md  nero1.py  pyproject.toml
Новая папка/: main.py
Новая папка (2)/: nero.py
Новая папка/бэк/: main.py
