[tool.poetry]
name = "face-rec"
version = "0.0.5"
description = "wark for fun"
authors = ["Your Name <you@example.com>"]
license = "gnu"
readme = "README.md"
packages = [{include = "face_rec"}]

[tool.poetry.dependencies]
python = "^3.10.10"
numpy = "^1.24.3"
colorama (0.4.6)
click (8.1.3)
dlib (19.24.1)
face-recognition-models (0.3.0)
pillow (9.5.0)


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
