[tool.poetry]
name = "face-reconition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "face_reconition"}]

[tool.poetry.dependencies]
python = "^3.10"
face-recognition = "^1.3.0"
opencv-python = "^4.7.0.72"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
